  - Select appropriate libpq/libpqxx binaries in Visual C++ (Bart Samwel)
 include/pqxx/connection_base.hxx, include/pqxx/libpq-forward.hxx,
 src/connection_base.cxx:
  - Fix for nasty bug in notice processor handling (Bart Samwel)
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Made check_displacement() const (Bart Samwel)
  - Removed unnecessary PQXX_LIBEXPORT directives (Bart Samwel)
 src/largeobject.cxx:
  - Fixed "long" return types; should be pos_type
 test/test000.cxx:
  - Visual C++ workaround: no stringstream << operator (Bart Samwel)
 test/test061.cxx:
  - Fixed "unreferenced local variable" warning (Bart Samwel)
2006-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Fixed bugs that caused validation to fail
2006-05-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Updated copyright string
  - Added middle initial to my name
  - Only one transaction (per connection) at a time
2006-04-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - No big performance gain with nontransaction (thanks Markus Schaber)
  - Use nontransaction for metadata modifications
 include/pqxx/connection_base.hxx:
  - Documented fact that PQhost() returns NULL if no host *specified*
2006-04-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - nontransaction is only faster when read-only, thanks Markus Schaber
2006-04-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Remove unsafe loop optimizations with g++ 4.1; breaks standard library
 src/util.cxx:
  - Fixed conversion of non-negatable signed numbers (breaks with g++ 4.1)
 test/test000.cxx:
  - List tests as they proceed, to facilitate debugging
  - Use stringstreams as example for LONG_MIN/LONG_MAX strings
 test/test004.cxx, test/test006.cxx, test/test007.cxx, test/test013.cxx,
 test/test015.cxx, test/test017.cxx, test/test018.cxx, test/test023.cxx,
 test/test025.cxx, test/test026.cxx, test/test032.cxx, test/test034.cxx,